Changed cv_button style on the click

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <!-- </header> -->
 
         <div class="btn_box">
-            <a href="piradi-info.html">
+            <a class="cv_link" href="piradi-info.html">
                 <button class="added_cv">რეზიუმეს დამატება</button>
             </a>
         </div>
